[package]
name = "rust-advance"
version = "0.1.0"
authors = ["shun-sfoo <ganymede0915@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
anyhow = "1.0"

rust-crypto = "^0.2"

