[package]
name = "live"
version = "0.1.0"
authors = ["shun-sfoo <ganymede0915@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
anyhow = "1.0"
