[package]
name = "proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.52"
askama = "0.11.0"
heck = "0.4.0"
litrs = "0.2.3"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
